--- a/trunk/mscore/mscore/textproperties.ui
+++ b/trunk/mscore/mscore/textproperties.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>411</width>
+    <width>454</width>
     <height>323</height>
    </rect>
   </property>
@@ -323,6 +323,29 @@
       </widget>
      </item>
      <item>
+      <widget class="QToolButton" name="alignBaseline">
+       <property name="minimumSize">
+        <size>
+         <width>28</width>
+         <height>28</height>
+        </size>
+       </property>
+       <property name="toolTip">
+        <string>center text vertical to text baseline</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="mscore.qrc">
+         <normaloff>:/data/text_vcenter.svg</normaloff>:/data/text_vcenter.svg</iconset>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QToolButton" name="alignBottom">
        <property name="minimumSize">
         <size>
@@ -379,7 +402,6 @@
        <property name="toolTip">
         <string>text color</string>
        </property>
-       <zorder>horizontalSpacer_2</zorder>
       </widget>
      </item>
      <item>
