--- a/trunk/mscore/mscore/note.ui
+++ b/trunk/mscore/mscore/note.ui
@@ -450,6 +450,13 @@
         </property>
        </widget>
       </item>
+      <item row="6" column="2" colspan="2">
+       <widget class="QPushButton" name="bend">
+        <property name="text">
+         <string notr="true" comment="do not translate">Bend</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
