--- a/mscore/mscore/restproperties.ui
+++ b/mscore/mscore/restproperties.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Chord Properties</string>
+   <string>Rest Properties</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
